Use getDeclaredConstructor().newInstance()